@startuml

class App {
    +CRUD (Aluno)
    +CRUD (Professor)
    +CRUD (Secretaria)
    +CRUD (Disciplinas)
}

class Curriculo {
   -codigo: String
}

class Curso {
    -codigo: int
    -nome: String
    +Curso(nome: String, creditos: Credito)
}


class Disciplina{
    -nome: String
    -cargaHoraria: int
    -creditos: int
    -curso: Curso
    -numeroMinimoAlunos: int
    -numeroMaximoAlunos: int
    -preRequisitos: List<Disciplina>
    -coRequisitos: List<Disciplina>
    +Disciplina(nome: String, cargaHoraria: int)
    +Disciplina()
    +matricularAluno(aluno: Aluno)
    +desmatricularAluno(aluno: Aluno)
    +CRUD (Disciplinas)
    +toString()
    +fromString()
}

class Matricula {
    -dataMatricula: Date
    -aluno: Aluno
    -valor: Double
    +notificarCobranca(aluno: Aluno, dataMatricula: Date): void
    +CRUD (Matricula)
}

class Professor implements Usuario {
    +autenticar(login: String, senha: String): Professor
    +CRUD (Professor)
}


class Aluno implements Usuario {
    -curso: Curso
    -matriculas: List<Matricula>
    +autenticar(login: String, senha: String): Aluno
    +CRUD (Aluno)
}


class Secretaria implements Usuario {
    +autenticar(login: String, senha: String): Secretaria
    +CRUD (Secretaria)
}

class Turma {
    -ano: int
    -semestre: int
    -disciplina: Disciplina
    -professor: Professor
    -status: Enum(Aberta, Fechada, Concluída)
    -matriculas: List<Matriculas>
}

interface Usuario{
    -nome: String
    -login: String
    -senha: String
    +getNome(): String
    +getLogin(): String
    +getSenha(): String
    +setNome(nome: String): void
    +setLogin(login: String): void
    +setSenha(senha: String): void
}

' Universidade "1" -- "n" Curriculo
Curriculo "1" -- "n" Curso
Curso "1" -- "n" Disciplina
Curso "1" -- "n" Aluno
Curso "1" -- "n" Professor
Disciplina "1" -- "n" Professor
Aluno "1" -- "n" Matricula
Professor "1" -- "n" Turma
Disciplina "1" -- "1" Turma
Matricula "1" -- "n" Turma


' Relações da classe App
Professor   <|--  App 
Aluno       <|--  App 
Secretaria  <|--  App 
Disciplina  <|--  App 

@enduml